--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.39.3",
     "hono": "^4.7.0",
+    "twilio": "^5.5.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
